--- a/artists.html
+++ b/artists.html
@@ -15,10 +15,10 @@
 <body>
     <header>
         <div id="divLogo">
-            <a href="/groupie-tracker">
+            <a href="/">
                 <img id="logoImage" src="/logo.png">
             </a>
-            <a href="/groupie-tracker/contact.html">
+            <a href="/contact.html">
                 <img id="mailImage" src="/mail.png">
             </a>
         </div>
