--- a/merci.html
+++ b/merci.html
@@ -17,14 +17,14 @@
 <body>
     <header>
         <div id="divLogo">
-            <a href="/groupie-tracker">
+            <a href="/">
                 <img id="logoImage" src="/logo.png">
             </a>
         </div>
     </header>
 
     <div>
-        <a class="merci" href="/groupie-tracker">
+        <a class="merci" href="/">
             <h1>Merci pour votre réponse</h1>
         </a>
     </div>
