--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div id="divLogo">
-            <a href="/groupie-tracker">
+            <a href="/">
                 <img id="logoImage" src="/logo.png">
             </a>
         </div>
@@ -38,7 +38,7 @@
             <textarea id="msg" placeholder="Votre message"></textarea>
         </div>
         <div>
-            <a href="/groupie-tracker/contact.html/merci.html">
+            <a href="/contact.html/merci.html">
                 <button class="raise">Envoyer</button>
             </a>
         </div>    
